<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Num1"
        android:textSize="25dp"
        android:textColor="#c95313"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/txt_num1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_Num2"
        android:textSize="25dp"
        android:textColor="#c95313"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/txt_num2"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/opciones"
        android:id="@+id/cmb_tipo_calculadora"
        ></Spinner>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_sumar"
            android:id="@+id/btn_sumar"
            />
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_restar"
            android:id="@+id/btn_restar"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_multiplicar"
            android:id="@+id/btn_multiplicar"
            />
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_dividir"
            android:id="@+id/btn_dividir"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_factorial"
            android:id="@+id/btn_factorial"
            />
        <Button
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/txt_limpiar"
            android:id="@+id/btn_limpiar"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_resultado"
        android:textSize="25dp"
        android:textColor="#780404"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:id="@+id/txt_resultado"/>

</LinearLayout>